--- a/CameraDetectorDemo/build.gradle
+++ b/CameraDetectorDemo/build.gradle
@@ -6,24 +6,26 @@ android {
 
     defaultConfig {
         applicationId "com.affectiva.cameradetectordemo"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
     sourceSets {
         main {
-            jniLibs.srcDirs = ['jniLibs']
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile('com.affectiva.android:affdexsdk:3.0.+')
 }
