--- a/FrameDetectorDemo/build.gradle
+++ b/FrameDetectorDemo/build.gradle
@@ -6,9 +6,9 @@ android {
 
     defaultConfig {
         applicationId "com.affectiva.framedetectordemo"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 22
-        versionCode 1
+        versionCode 2
         versionName "1.0"
     }
     buildTypes {
@@ -19,11 +19,10 @@ android {
     }
     sourceSets {
         main {
-            jniLibs.srcDirs = ['jniLibs']
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile('com.affectiva.android:affdexsdk:3.0.+')
 }
