--- a/FrameDetectorDemo/src/main/AndroidManifest.xml
+++ b/FrameDetectorDemo/src/main/AndroidManifest.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.affectiva.framedetectordemo" >
 
     <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
+        tools:replace="android:allowBackup,android:label"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:configChanges="screenSize|keyboardHidden|orientation"
-            android:label="Frame Detector Demo" >
+            android:configChanges="keyboardHidden|screenSize|orientation"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
