--- a/ImageDetectorDemo/build.gradle
+++ b/ImageDetectorDemo/build.gradle
@@ -5,10 +5,10 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.example.alan.imagedetectordemo"
-        minSdkVersion 15
+        applicationId "com.affectiva.imagedetectordemo"
+        minSdkVersion 16
         targetSdkVersion 22
-        versionCode 1
+        versionCode 2
         versionName "1.0"
     }
     buildTypes {
@@ -19,15 +19,10 @@ android {
     }
     sourceSets {
         main {
-            jniLibs.srcDirs = ['jniLibs']
         }
     }
 }
 
 dependencies {
-    //include the Affdex SDK jars
-    compile files('libs/Affdex-sdk.jar')
-    compile files('libs/Affdex-sdk-javadoc.jar')
-    compile files('libs/dagger-1.2.2.jar')
-    compile files('libs/javax.inject-1.jar')
+    compile('com.affectiva.android:affdexsdk:3.0.+')
 }
